[package]
name = "douyu-danmu"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
bytes = "0.5"
chrono = "0.4"
clap = "2.33.0"
futures = "0.3.1"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
h2 = "0.2.1"
http = "0.2.0"
http-body = "0.3.1"
httparse = "1.0"
hyper = "0.13.1"
itoa = "0.4.1"
log = "0.4"
pin-project = "0.4"
tokio-core = "0.1"
tokio = { version = "0.2", features = ["sync"] }
time = "0.2.2"
want = "0.3"
